--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "scripts": {
     "start:server": "node ./server.js",
     "build:webpack": "webpack --config=.config/webpack.config.prod.js",
-    "build:typescript": "tsc",
+    "build:typescript": "tsc --project tsconfig.node.json",
     "build": "npm run build:webpack && npm run build:typescript"
   },
   "dependencies": {
+    "@types/react": "^17.0.5",
     "@wordpress/url": "^3.0.0",
+    "classnames": "^2.3.1",
     "date-fns": "^2.21.3",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "prettyjson": "^1.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "yargs": "^17.0.1"
   },
   "engines": {
@@ -30,6 +34,9 @@
     "glitch",
     "express"
   ],
+  "bin": {
+    "humaans-cli": "./cli.js"
+  },
   "devDependencies": {
     "@humanmade/eslint-config": "^1.1.3",
     "@humanmade/webpack-helpers": "^0.11.1",
