Update to add graphs

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -19,7 +19,8 @@
     "incremental": true, // Enable incremental compilation by reading/writing information from prior compilations to a file on disk
     "noFallthroughCasesInSwitch": true, // Report errors for fallthrough cases in switch statement
     "rootDir": "src/node",
-    "outDir": "build"
+    "outDir": "build",
+    "tsBuildInfoFile": "./build/node"
   },
   "include": [
     "./src/node/api.ts"
