--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start:server": "node ./server.js",
-    "start:webpack": "webpack --config=.config/webpack.config.prod.js --watch",
+    "start:webpack": "webpack-dev-server --config=.config/webpack.config.dev.js",
     "build:webpack": "webpack --config=.config/webpack.config.prod.js",
     "build:typescript": "tsc --project tsconfig.node.json",
     "build": "npm run build:webpack && npm run build:typescript"
@@ -17,10 +17,12 @@
     "date-fns": "^2.21.3",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
     "prettyjson": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "victory": "^35.8.0",
     "yargs": "^17.0.1"
   },
   "engines": {
@@ -41,6 +43,7 @@
   "devDependencies": {
     "@humanmade/eslint-config": "^1.1.3",
     "@humanmade/webpack-helpers": "^0.11.1",
+    "@types/lodash": "^4.14.170",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.26.0",
     "eslint-config-react-app": "^3.0.8",
