--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -16,11 +16,10 @@
     "declaration": true, // Generate corresponding .d.ts file
     "noUnusedLocals": true, // Report errors on unused locals
     "noUnusedParameters": true, // Report errors on unused parameters
-    "incremental": true, // Enable incremental compilation by reading/writing information from prior compilations to a file on disk
+    "incremental": false, // Enable incremental compilation by reading/writing information from prior compilations to a file on disk
     "noFallthroughCasesInSwitch": true, // Report errors for fallthrough cases in switch statement
     "rootDir": "src/node",
-    "outDir": "build",
-    "tsBuildInfoFile": "./build/node"
+    "outDir": "build"
   },
   "include": [
     "./src/node/api.ts"
